fix help button on mobile

--- a/pixies.css
+++ b/pixies.css
@@ -801,6 +801,10 @@ body > .card {
     box-shadow: 0 0 8px 5px orange;
   }
 }
+#globalaction_zoom_wrap {
+  display: none !important;
+}
+
 .color-help-folded-content {
   background: url("img/logo-coloradd.svg") white center no-repeat;
   background-size: contain;
