--- a/src/_help.scss
+++ b/src/_help.scss
@@ -1,3 +1,7 @@
+#globalaction_zoom_wrap {
+    display: none !important;
+}
+
 .color-help-folded-content {
     background: url('img/logo-coloradd.svg') white center no-repeat;
     background-size: contain;
